--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,24 @@
   box-sizing: border-box;
 }
 
+a svg {
+  margin-right: 8px;
+}
+
+button {
+  cursor: pointer;
+}
+
+button:hover {
+  filter: brightness(90%);
+}
+
+input,
+button,
+textarea {
+  font: 15px Roboto, sans-serif;
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
