--- a/src/index.css
+++ b/src/index.css
@@ -5,7 +5,21 @@
   box-sizing: border-box;
 }
 
-a svg {
+a {
+  display: flex;
+  align-items: center;
+  color: #41414d;
+  font-size: 18px;
+  text-decoration: none;
+  font-weight: 500;
+  transition: opacity 0.2s;
+}
+
+a:hover {
+  opacity: 0.6;
+}
+
+h3 svg {
   margin-right: 8px;
 }
 
