--- a/src/index.css
+++ b/src/index.css
@@ -8,7 +8,7 @@
 a {
   display: flex;
   align-items: center;
-  color: #41414d;
+  color: #ff7989;
   font-size: 18px;
   text-decoration: none;
   font-weight: 500;
@@ -35,6 +35,29 @@ input,
 button,
 textarea {
   font: 15px Roboto, sans-serif;
+}
+
+ul li {
+  background: #f5f5f5;
+  padding: 24px;
+  border-radius: 8px;
+  position: relative;
+}
+
+ul li strong {
+  display: block;
+  margin-bottom: 16px;
+  color: #41414d;
+}
+
+ul li p + strong {
+  margin-top: 32px;
+}
+
+ul li p {
+  color: #737380;
+  line-height: 21px;
+  font-size: 16px;
 }
 
 body {
